--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
     </header>
 <main>
   <section id="home">
-    <div class="container flex flex-col items-center gap-10 md:flex">
-      <div class="mx-auto md:basis-1/2 lg:basis-2/5">
+    <div class="container flex flex-col items-center gap-10 md:flex-row">
+      <div class="mx-auto md:basis-1/2 lg:basis-2/5 animate-movingY">
         <img src="src/img/home-image.png" alt="home image" class="w-60 md:w-full">
       </div>
-      <div class="text-center">
+      <div class="text-center md:basis-1/2 md:text-start lg:basis-3/5">
         <h1 class="home__title">HAPPY TUMMY WITH TASTY BURGERS.</h1>
-        <div class="separator mx-auto"></div>
+        <div class="separator mx-auto md:mx-auto"></div>
         <p class="paragraph">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. 
 Voluptatum,libero magni? Fugiat perspiciatis eius, 
@@ -68,7 +68,7 @@ sequi aliquid ullam dolorem temporibus voluptate corrupti
 fugit saepe sunt unde culpa? Tenetur quos quod laudantium.
 
         </p>
-        <div class="text-base flex items-center justify-center gap-4 py-10">
+        <div class="text-base flex items-center justify-center gap-4 py-10 md:justify-start mdLgap-20">
           <div class="text-center">
             <i class="fa-solid fa-utensils text-secondaryColor text-4xl"></i>
                 <br>
@@ -91,7 +91,113 @@ fugit saepe sunt unde culpa? Tenetur quos quod laudantium.
   </section>
     <!---------------home------------>
 
-  </main>
+</main>
+<!-------category----->
+<section id="category">
+  <div class="container flex flex-col gap-5 md:flex-row">
+    <!--card 1 -->
+    <div class="bg-secondaryColor flex py-3 rounded-lg overflow-hidden md:flex-1">
+      <div class="basis-1/3 relative">
+        <img src="./src/img/burger-1.png" alt="cateogory image" class="absolute w-28 -bottom-4 -left-4">
+      </div>
+      <div>
+        <div class="mb-2">
+          <h4 class="card__title">Food</h4>
+          <p class="text-xs">Lorem ipsum dolor sit.</p>
+          <a href="#" class="text-blackColor cursor-pointer">Buy online</a>
+        </div>
+      </div>
+    </div>
+
+      <!--card 2 -->
+      <div class="bg-redColor flex py-3 rounded-lg overflow-hidden md:flex-1">
+        <div class="basis-1/3 relative">
+          <img src="./src/img/snack-1.png" alt="cateogory image" class="absolute w-28 -bottom-4 -left-4">
+        </div>
+        <div>
+          <div class="mb-2">
+            <h4 class="card__title">Food</h4>
+            <p class="text-xs">Lorem ipsum dolor sit.</p>
+            <a href="#" class="text-secondaryColor cursor-pointer">Buy online</a>
+          </div>
+        </div>
+      </div>
+
+        <!--card 3 -->
+    <div class="bg-greenColor flex py-3 rounded-lg overflow-hidden md:flex-1">
+      <div class="basis-1/3 relative">
+        <img src="./src/img/beverage-2.png" alt="cateogory image" class="absolute w-28 -bottom-4 -left-4">
+      </div>
+      <div>
+        <div class="mb-2">
+          <h4 class="card__title">Food</h4>
+          <p class="text-xs">Lorem ipsum dolor sit.</p>
+          <a href="#" class="text-secondaryColor cursor-pointer">Buy online</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</section>
+
+<!-------promo section----->
+<section id="promo">
+<div class="container flex flex-col gap-5 lg:gap-10 lg:flex-row">
+  <!-- card 1-->
+   <div class="bg-primaryColor flex flex-col p-5 rounded-lg md:flex-row md:items-center lg:flex-row-reverse lg:flex-1">
+    <img src="/src/img/promo-1.png" alt="promo img" class="w-40 mx-auto hover:animate-movingY md:mx-5">
+    <div class="space-y-2 pt-5 md:pt-0">
+      <p class="text-xs text-secondaryColor">Payday promo</p>
+      <h3 class="card__title">GET A 10% DISCOUNT ON PAYDAY WEEK</h3>
+      <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        Buy online</p>
+        <a href="#" class="text-xs text-secondaryColor">Buy Online</a>
+    </div>
+   </div>
+
+   <!-- card 2-->
+   <div class="bg-primaryColor flex flex-col p-5 rounded-lg md:flex-row md:items-center lg:flex-row-reverse lg:flex-1">
+    <img src="/src/img/promo-2.png" alt="promo img" class="w-40 mx-auto hover:animate-movingY md:mx-5">
+    <div class="space-y-2 pt-5 md:pt-0">
+      <p class="text-xs text-secondaryColor">Payday promo</p>
+      <h3 class="card__title">GET A 10% DISCOUNT ON PAYDAY WEEK</h3>
+      <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        Buy online</p>
+        <a href="#" class="text-xs text-secondaryColor">Buy Online</a>
+    </div>
+   </div>
+   </div>
+</div>
+</section>
+
+<!----About ---->
+<section id="about" >
+<div class="container flex flex-col gap-10 md:flex-row">
+  <div class="flex-1">
+    <img src="/src/img/about.jpg" alt="about" class="rounded-lg">
+  </div>
+  <div class="flex-1">
+    <h2 class="section__title">FIND FOOD AND DRINKS, ALL-IN-ONE PLACE FOR YOUR BEST TASTE.</h2>
+    <div class="separotor"></div>
+    <p class="paragraph">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+      Aenean commodo ligula eget dolor. Aenean massa. 
+      Cum sociis natoque penatibus et magnis dis parturient montes.
+      </p>
+    <ul class="grid grid-cols-2 py-5 space-y-1">
+      <li class="text-xs text-paragraphColor"> <i class="fa-solid fa-check text-secondaryColor"></i>  Best Price</li>
+      <li class="text-xs text-paragraphColor"><i class="fa-solid fa-check text-secondaryColor"></i> Fresh Ingredient</li>
+      <li class="text-xs text-paragraphColor"><i class="fa-solid fa-check text-secondaryColor"></i>  Best Service</li>
+      <li class="text-xs text-paragraphColor"><i class="fa-solid fa-check text-secondaryColor"></i>  Health Protocol</li>
+    </ul>
+    <a href="" class="btn btn-primary">About Us</a>
+  </div>
+</div>
+</section>
+
+<!----Menu Section ---->
+<section>
+  
+</section>
     <script src="main.js"></script>
   </body>
   </html>  
