--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ fugit saepe sunt unde culpa? Tenetur quos quod laudantium.
 <div class="container flex flex-col gap-5 lg:gap-10 lg:flex-row">
   <!-- card 1-->
    <div class="bg-primaryColor flex flex-col p-5 rounded-lg md:flex-row md:items-center lg:flex-row-reverse lg:flex-1">
-    <img src="/src/img/promo-1.png" alt="promo img" class="w-40 mx-auto hover:animate-movingY md:mx-5">
+    <img src="./src/img/promo-1.png" alt="promo img" class="w-40 mx-auto hover:animate-movingY md:mx-5">
     <div class="space-y-2 pt-5 md:pt-0">
       <p class="text-xs text-secondaryColor">Payday promo</p>
       <h3 class="card__title">GET A 10% DISCOUNT ON PAYDAY WEEK</h3>
@@ -157,7 +157,7 @@ fugit saepe sunt unde culpa? Tenetur quos quod laudantium.
 
    <!-- card 2-->
    <div class="bg-primaryColor flex flex-col p-5 rounded-lg md:flex-row md:items-center lg:flex-row-reverse lg:flex-1">
-    <img src="/src/img/promo-2.png" alt="promo img" class="w-40 mx-auto hover:animate-movingY md:mx-5">
+    <img src="./src/img/promo-2.png" alt="promo img" class="w-40 mx-auto hover:animate-movingY md:mx-5">
     <div class="space-y-2 pt-5 md:pt-0">
       <p class="text-xs text-secondaryColor">Payday promo</p>
       <h3 class="card__title">GET A 10% DISCOUNT ON PAYDAY WEEK</h3>
@@ -174,7 +174,7 @@ fugit saepe sunt unde culpa? Tenetur quos quod laudantium.
 <section id="about" >
 <div class="container flex flex-col gap-10 md:flex-row">
   <div class="flex-1">
-    <img src="/src/img/about.jpg" alt="about" class="rounded-lg">
+    <img src="./src/img/about.jpg" alt="about" class="rounded-lg">
   </div>
   <div class="flex-1">
     <h2 class="section__title">FIND FOOD AND DRINKS, ALL-IN-ONE PLACE FOR YOUR BEST TASTE.</h2>
@@ -196,7 +196,7 @@ fugit saepe sunt unde culpa? Tenetur quos quod laudantium.
 
 <!----Menu Section ---->
 <section>
-  
+
 </section>
     <script src="main.js"></script>
   </body>
