--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ fugit saepe sunt unde culpa? Tenetur quos quod laudantium.
     <!---food-->
     <li class="item_wrap food">
       <div class="h-56 grid place-items-center bg-primaryColorLight rounded-3xl hover:bg-secondaryColor ease-linear duration-200 lg:h-40">
-        <img src="/src/img/burger-1.png" alt="food image" class="w-40 hover:scale-110 ease-linear duration-200 md:w-48 lg:w-24">
+        <img src="./src/img/burger-1.png" alt="food image" class="w-40 hover:scale-110 ease-linear duration-200 md:w-48 lg:w-24">
       </div>
       <div class="pt-5">
         <div class="mb-2">
@@ -236,7 +236,7 @@ fugit saepe sunt unde culpa? Tenetur quos quod laudantium.
      <!---burger2-->
      <li class="item_wrap food">
       <div class="h-56 grid place-items-center bg-primaryColorLight rounded-3xl hover:bg-secondaryColor ease-linear duration-200 lg:h-40">
-        <img src="/src/img/burger-2.png" alt="food image" class="w-40 hover:scale-110 ease-linear duration-200 md:w-48 lg:w-24">
+        <img src="./src/img/burger-2.png" alt="food image" class="w-40 hover:scale-110 ease-linear duration-200 md:w-48 lg:w-24">
       </div>
       <div class="pt-5">
         <div class="mb-2">
@@ -249,7 +249,7 @@ fugit saepe sunt unde culpa? Tenetur quos quod laudantium.
     <!---food3-->
     <li class="item_wrap food">
       <div class="h-56 grid place-items-center bg-primaryColorLight rounded-3xl hover:bg-secondaryColor ease-linear duration-200 lg:h-40">
-        <img src="/src/img/burger-3.png" alt="food image" class="w-40 hover:scale-110 ease-linear duration-200 md:w-48 lg:w-24">
+        <img src="./src/img/burger-3.png" alt="food image" class="w-40 hover:scale-110 ease-linear duration-200 md:w-48 lg:w-24">
       </div>
       <div class="pt-5">
         <div class="mb-2">
@@ -262,7 +262,7 @@ fugit saepe sunt unde culpa? Tenetur quos quod laudantium.
     <!---food4-->
     <li class="item_wrap food">
       <div class="h-56 grid place-items-center bg-primaryColorLight rounded-3xl hover:bg-secondaryColor ease-linear duration-200 lg:h-40">
-        <img src="/src/img/burger-4.png" alt="food image" class="w-40 hover:scale-110 ease-linear duration-200 md:w-48 lg:w-24">
+        <img src="./src/img/burger-4.png" alt="food image" class="w-40 hover:scale-110 ease-linear duration-200 md:w-48 lg:w-24">
       </div>
       <div class="pt-5">
         <div class="mb-2">
@@ -275,7 +275,7 @@ fugit saepe sunt unde culpa? Tenetur quos quod laudantium.
     <!---food5-->
     <li class="item_wrap food">
       <div class="h-56 grid place-items-center bg-primaryColorLight rounded-3xl hover:bg-secondaryColor ease-linear duration-200 lg:h-40">
-        <img src="/src/img/burger-5.png" alt="food image" class="w-40 hover:scale-110 ease-linear duration-200 md:w-48 lg:w-24">
+        <img src="./src/img/burger-5.png" alt="food image" class="w-40 hover:scale-110 ease-linear duration-200 md:w-48 lg:w-24">
       </div>
       <div class="pt-5">
         <div class="mb-2">
@@ -289,7 +289,7 @@ fugit saepe sunt unde culpa? Tenetur quos quod laudantium.
     <!------Snack items tabs-->
       <li class="item_wrap snack">
       <div class="h-56 grid place-items-center bg-primaryColorLight rounded-3xl hover:bg-secondaryColor ease-linear duration-200 lg:h-40">
-        <img src="/src/img/snack-1.png" alt="food image" class="w-40 hover:scale-110 ease-linear duration-200 md:w-48 lg:w-24">
+        <img src="./src/img/snack-1.png" alt="food image" class="w-40 hover:scale-110 ease-linear duration-200 md:w-48 lg:w-24">
       </div>
       <div class="pt-5">
         <div class="mb-2">
@@ -301,7 +301,7 @@ fugit saepe sunt unde culpa? Tenetur quos quod laudantium.
     </li>
     <li class="item_wrap snack">
       <div class="h-56 grid place-items-center bg-primaryColorLight rounded-3xl hover:bg-secondaryColor ease-linear duration-200 lg:h-40">
-        <img src="/src/img/snack-2.png" alt="food image" class="w-40 hover:scale-110 ease-linear duration-200 md:w-48 lg:w-24">
+        <img src="./src/img/snack-2.png" alt="food image" class="w-40 hover:scale-110 ease-linear duration-200 md:w-48 lg:w-24">
       </div>
       <div class="pt-5">
         <div class="mb-2">
@@ -313,7 +313,7 @@ fugit saepe sunt unde culpa? Tenetur quos quod laudantium.
     </li>
     <li class="item_wrap snack">
       <div class="h-56 grid place-items-center bg-primaryColorLight rounded-3xl hover:bg-secondaryColor ease-linear duration-200 lg:h-40">
-        <img src="/src/img/snack-3.png" alt="food image" class="w-40 hover:scale-110 ease-linear duration-200 md:w-48 lg:w-24">
+        <img src="./src/img/snack-3.png" alt="food image" class="w-40 hover:scale-110 ease-linear duration-200 md:w-48 lg:w-24">
       </div>
       <div class="pt-5">
         <div class="mb-2">
@@ -325,7 +325,7 @@ fugit saepe sunt unde culpa? Tenetur quos quod laudantium.
     </li>
     <li class="item_wrap snack">
       <div class="h-56 grid place-items-center bg-primaryColorLight rounded-3xl hover:bg-secondaryColor ease-linear duration-200 lg:h-40">
-        <img src="/src/img/snack-4.png" alt="food image" class="w-40 hover:scale-110 ease-linear duration-200 md:w-48 lg:w-24">
+        <img src="./src/img/snack-4.png" alt="food image" class="w-40 hover:scale-110 ease-linear duration-200 md:w-48 lg:w-24">
       </div>
       <div class="pt-5">
         <div class="mb-2">
@@ -337,7 +337,7 @@ fugit saepe sunt unde culpa? Tenetur quos quod laudantium.
     </li>
     <li class="item_wrap snack">
       <div class="h-56 grid place-items-center bg-primaryColorLight rounded-3xl hover:bg-secondaryColor ease-linear duration-200 lg:h-40">
-        <img src="/src/img/snack-5.png" alt="food image" class="w-40 hover:scale-110 ease-linear duration-200 md:w-48 lg:w-24">
+        <img src="./src/img/snack-5.png" alt="food image" class="w-40 hover:scale-110 ease-linear duration-200 md:w-48 lg:w-24">
       </div>
       <div class="pt-5">
         <div class="mb-2">
@@ -349,7 +349,7 @@ fugit saepe sunt unde culpa? Tenetur quos quod laudantium.
     </li>
     <li class="item_wrap snack">
       <div class="h-56 grid place-items-center bg-primaryColorLight rounded-3xl hover:bg-secondaryColor ease-linear duration-200 lg:h-40">
-        <img src="/src/img/snack-6.png" alt="food image" class="w-40 hover:scale-110 ease-linear duration-200 md:w-48 lg:w-24">
+        <img src="./src/img/snack-6.png" alt="food image" class="w-40 hover:scale-110 ease-linear duration-200 md:w-48 lg:w-24">
       </div>
       <div class="pt-5">
         <div class="mb-2">
@@ -363,7 +363,7 @@ fugit saepe sunt unde culpa? Tenetur quos quod laudantium.
      <!------beverge items tabs-->
      <li class="item_wrap beverage">
       <div class="h-56 grid place-items-center bg-primaryColorLight rounded-3xl hover:bg-secondaryColor ease-linear duration-200 lg:h-40">
-        <img src="/src/img/beverage-1.png" alt="food image" class="w-40 hover:scale-110 ease-linear duration-200 md:w-48 lg:w-24">
+        <img src="./src/img/beverage-1.png" alt="food image" class="w-40 hover:scale-110 ease-linear duration-200 md:w-48 lg:w-24">
       </div>
       <div class="pt-5">
         <div class="mb-2">
@@ -375,7 +375,7 @@ fugit saepe sunt unde culpa? Tenetur quos quod laudantium.
     </li>
     <li class="item_wrap beverage">
       <div class="h-56 grid place-items-center bg-primaryColorLight rounded-3xl hover:bg-secondaryColor ease-linear duration-200 lg:h-40">
-        <img src="/src/img/beverage-2.png" alt="food image" class="w-40 hover:scale-110 ease-linear duration-200 md:w-48 lg:w-24">
+        <img src="./src/img/beverage-2.png" alt="food image" class="w-40 hover:scale-110 ease-linear duration-200 md:w-48 lg:w-24">
       </div>
       <div class="pt-5">
         <div class="mb-2">
@@ -387,7 +387,7 @@ fugit saepe sunt unde culpa? Tenetur quos quod laudantium.
     </li>
     <li class="item_wrap beverage">
       <div class="h-56 grid place-items-center bg-primaryColorLight rounded-3xl hover:bg-secondaryColor ease-linear duration-200 lg:h-40">
-        <img src="/src/img/beverage-3.png" alt="food image" class="w-40 hover:scale-110 ease-linear duration-200 md:w-48 lg:w-24">
+        <img src="./src/img/beverage-3.png" alt="food image" class="w-40 hover:scale-110 ease-linear duration-200 md:w-48 lg:w-24">
       </div>
       <div class="pt-5">
         <div class="mb-2">
@@ -399,7 +399,7 @@ fugit saepe sunt unde culpa? Tenetur quos quod laudantium.
     </li>
     <li class="item_wrap beverage">
       <div class="h-56 grid place-items-center bg-primaryColorLight rounded-3xl hover:bg-secondaryColor ease-linear duration-200 lg:h-40">
-        <img src="/src/img/beverage-4.png" alt="food image" class="w-40 hover:scale-110 ease-linear duration-200 md:w-48 lg:w-24">
+        <img src="./src/img/beverage-4.png" alt="food image" class="w-40 hover:scale-110 ease-linear duration-200 md:w-48 lg:w-24">
       </div>
       <div class="pt-5">
         <div class="mb-2">
@@ -411,7 +411,7 @@ fugit saepe sunt unde culpa? Tenetur quos quod laudantium.
     </li>
     <li class="item_wrap beverage">
       <div class="h-56 grid place-items-center bg-primaryColorLight rounded-3xl hover:bg-secondaryColor ease-linear duration-200 lg:h-40">
-        <img src="/src/img/beverage-5.png" alt="food image" class="w-40 hover:scale-110 ease-linear duration-200 md:w-48 lg:w-24">
+        <img src="./src/img/beverage-5.png" alt="food image" class="w-40 hover:scale-110 ease-linear duration-200 md:w-48 lg:w-24">
       </div>
       <div class="pt-5">
         <div class="mb-2">
